Don't collapse side panel on click - only on touch. Fixes for mobile + other UI fixes.

--- a/src/main/resources/assets/styles/main-app-wrapper.less
+++ b/src/main/resources/assets/styles/main-app-wrapper.less
@@ -4,7 +4,7 @@
   @sidebar-width-mobile: 260px;
 
   .sidebar {
-    z-index: 2;
+    z-index: 3;
     padding-top: 44px;
     background-color: #2A292A;
     width: @sidebar-width;
@@ -125,7 +125,7 @@
     top: 4px;
     background-color: transparent;
     cursor: pointer;
-    z-index: 3;
+    z-index: 4;
     line-height: 17px;
     padding: 6px 5px 3px;
     outline-width: 2px;
