--- a/src/main/resources/assets/styles/project/project-selector.less
+++ b/src/main/resources/assets/styles/project/project-selector.less
@@ -5,10 +5,6 @@
   .project-selector {
     z-index: 2;
 
-    &.open {
-      box-shadow: 0px 1px 7px 2px rgba(0, 0, 0, 0.5);
-    }
-
     &:not(.single-repo) {
       .project-viewer {
         cursor: pointer;
@@ -28,10 +24,13 @@
     }
 
     .selected-project-view {
+      min-width: 200px;
       height: 44px;
       padding-left: 20px;
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      box-sizing: border-box;
 
       .label {
         font-size: 16px;
@@ -41,9 +40,9 @@
 
       .project-viewer {
         height: 100%;
+        width: 100%;
         display: flex;
         align-items: center;
-        margin-right: 10px;
 
         .names-and-icon-view {
           display: flex;
@@ -116,7 +115,6 @@
 
     .projects-list-items {
       background-color: @admin-bg-dark-gray;
-      padding-bottom: 5px;
       min-width: 100%;
 
       .list-header {
@@ -153,6 +151,11 @@
         }
       }
     }
+
+    &.open .projects-list-items {
+      box-shadow: 0 7px 7px 2px rgba(0, 0, 0, 0.5);
+    }
+
   }
 
   .show-issues-button-wrapper {
